z-index fix

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -158,6 +158,7 @@ button,.btn{
   color:#eeeeee;
   border:none;
   border-radius:5px;
+  z-index:3;
   // margin-left: 3%;
 }
 
